# Soundtrack

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
src/soundtrack/: __init__.py  __main__.py
src/soundtrack/internal/: messages.py  util.py
